--- a/lib/jSlabify.css
+++ b/lib/jSlabify.css
@@ -15,3 +15,228 @@
 .slabbedtextdone .slabbedtext {
 	display:block;
 }
+
+/* separators */
+.jslabify .slabbedtext.slabbreak-ellipsis {
+	display: block;
+	position: relative;
+	margin: 0 2em 1em;
+	text-align: center;
+	line-height: 2em;
+}
+.jslabify .slabbedtext.slabbreak-ellipsis:before {
+	content: "\2022\2022\2022";
+	position: relative;
+	display: inline-block;
+	background-color: #fff;
+	padding: 0.25em 0.25em 0;
+	z-index: 10;
+}
+.jslabify .slabbedtext.slabbreak-ellipsis:after {
+	content: ' ';
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	border-top: 0.25em solid;
+	z-index: 0;
+}
+
+.jslabify .slabbedtext.slabbreak-arrow-left {
+	display: block;
+	position: relative;
+	margin: 1em;
+	margin-right: 0;
+	border-top: 1em solid;
+}
+.jslabify .slabbedtext.slabbreak-arrow-left:before {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-right-color: inherit;
+	border-width: 1em;
+	margin-top: -1.5em;
+}
+
+.jslabify .slabbedtext.slabbreak-arrow-right {
+	display: block;
+	position: relative;
+	margin: 1em;
+	margin-left: 0;
+	border-top: 1em solid;
+}
+.jslabify .slabbedtext.slabbreak-arrow-right:before {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-left-color: inherit;
+	border-width: 1em;
+	margin-top: -1.5em;
+}
+
+.jslabify .slabbedtext.slabbreak-arrow-both {
+	display: block;
+	position: relative;
+	margin: 1em;
+	border-top: 1em solid;
+}
+.jslabify .slabbedtext.slabbreak-arrow-both:before {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-left-color: inherit;
+	border-width: 1em;
+	margin-top: -1.5em;
+}
+.jslabify .slabbedtext.slabbreak-arrow-both:after {
+	display: block;
+	content: " ";
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-right-color: inherit;
+	border-width: 1em;
+	margin-top: -1.5em;
+}
+
+.jslabify .slabbedtext.slabbreak-thick-arrow-left {
+	display: block;
+	position: relative;
+	margin: 1em;
+	border-top: 2em solid;
+}
+.jslabify .slabbedtext.slabbreak-thick-arrow-left:before {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-right-color: inherit;
+	border-width: 1em;
+	margin-top: -2em;
+}
+.jslabify .slabbedtext.slabbreak-thick-arrow-left:after {
+	display: block;
+	content: " ";
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: inherit;
+	border-right-color: rgba(0, 0, 0, 0);
+	border-width: 1em;
+	margin-top: -2em;
+	margin-left: -1em;
+}
+
+.jslabify .slabbedtext.slabbreak-thick-arrow-right {
+	display: block;
+	position: relative;
+	margin: 1em;
+	border-top: 2em solid;
+}
+.jslabify .slabbedtext.slabbreak-thick-arrow-right:before {
+	display: block;
+	content: " ";
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: rgba(0, 0, 0, 0);
+	border-left-color: inherit;
+	border-width: 1em;
+	margin-top: -2em;
+}
+.jslabify .slabbedtext.slabbreak-thick-arrow-right:after {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: inherit;
+	border-left-color: rgba(0, 0, 0, 0);
+	border-width: 1em;
+	margin-top: -2em;
+	margin-right: -1em;
+}
+
+.jslabify .slabbedtext.slabbreak-banner {
+	display: block;
+	position: relative;
+	margin: 1em 2em 1.5em;
+	border-top: 2em solid;
+}
+.jslabify .slabbedtext.slabbreak-banner:before {
+	display: block;
+	content: " ";
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: inherit;
+	border-left-color: rgba(0, 0, 0, 0);
+	border-width: 1em;
+	margin-top: -1.5em;
+	margin-right: -0.5em;
+}
+.jslabify .slabbedtext.slabbreak-banner:after {
+	display: block;
+	content: " ";
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	border-color: inherit;
+	border-right-color: rgba(0, 0, 0, 0);
+	border-width: 1em;
+	margin-top: -1.5em;
+	margin-left: -0.5em;
+}
